added total WSSD plot and fixed a bug in the plots.

--- a/clustering.Rmd
+++ b/clustering.Rmd
@@ -1,3 +1,8 @@
+---
+output: html_document
+editor_options: 
+  chunk_output_type: console
+---
 # Clustering {#clustering}
 
 ```{r 09-clustering, echo = FALSE, message = FALSE, warning = FALSE}
@@ -263,7 +268,10 @@ base <- ggplot(clus1) +
     min(clus1$bill_length_standardized) - 0.25 * sd(clus1$bill_length_standardized),
     max(clus1$bill_length_standardized) + 0.25 * sd(clus1$bill_length_standardized)
   )) +
-  geom_point(aes(y = mean(bill_length_standardized), x = mean(flipper_length_standardized), colour = "red", size = 2.5)) +
+  geom_point(aes(y = mean(bill_length_standardized), 
+                 x = mean(flipper_length_standardized)), 
+             colour = "#F8766D", 
+             size = 5) +
   theme(legend.position = "none") 
 base
 ```
@@ -295,12 +303,81 @@ for (i in 1:nrow(clus1)) {
     xend = unlist(clus1[i, "flipper_length_standardized"]), yend = unlist(clus1[i, "bill_length_standardized"])
   )
 }
-base <- base + geom_point(aes(y = mean(bill_length_standardized), x = mean(flipper_length_standardized), colour = "red", size = 2.5))
+base <- base + 
+  geom_point(aes(y = mean(bill_length_standardized), 
+                 x = mean(flipper_length_standardized)), 
+             colour = "#F8766D", 
+             size = 5)
 base
 ```
 
 The larger the value of $S^2$, the more spread-out the cluster is, since large $S^2$ means that points are far from the cluster center.
-Note, however, that "large" is relative to *both* the scale of the variables for clustering *and* the number of points in the cluster. A cluster where points are very close to the center might still have a large $S^2$ if there are many data points in the cluster. 
+Note, however, that "large" is relative to *both* the scale of the variables for clustering *and* the number of points in the cluster. A cluster where points are very close to the center might still have a large $S^2$ if there are many data points in the cluster.
+
+After we have calculated the WSSD for all the clusters, 
+we sum them together to to get the *total WSSD*.
+For our example, 
+this means adding up all the distances of the black lines in 
+Figure \@ref(fig:10-toy-example-all-clus-dists).
+
+```{r 10-toy-example-all-clus-dists, echo = FALSE, warning = FALSE, fig.height = 4, fig.width = 5, fig.cap = "All clusters from the `penguin_data` data set example. Observations are in orange blue, and yellow with the cluster center highlighted in red. The distances from the observations to each of the respective cluster centers are represented as black lines."}
+
+
+all_clusters_base <- data |>
+  ggplot(aes(y = bill_length_standardized,
+             x = flipper_length_standardized,
+             colour = cluster)) +
+  geom_point() +
+  xlab("Flipper Length (standardized)") +
+  ylab("Bill Length (standardized)") + 
+  scale_color_manual(values= c("darkorange3", 
+                               "dodgerblue3", 
+                               "goldenrod1"))
+cluster_centres <- tibble(x = c(0, 0, 0),
+                          y = c(0, 0, 0))
+
+for (cluster_number in seq_along(1:3)) {
+  
+  clus <- filter(data, cluster == cluster_number) |>
+    select(bill_length_standardized, flipper_length_standardized)
+  
+  mn <- clus |> 
+    summarize(flipper_length_standardized = mean(flipper_length_standardized),
+              bill_length_standardized = mean(bill_length_standardized))
+  
+  for (i in 1:nrow(clus)) {
+    all_clusters_base <- all_clusters_base + 
+      geom_segment(x = unlist(mn[1, "flipper_length_standardized"]), 
+                   y = unlist(mn[1, "bill_length_standardized"]),
+      xend = unlist(clus[i, "flipper_length_standardized"]), 
+      yend = unlist(clus[i, "bill_length_standardized"]),
+      color = "black"
+    )
+  }
+  
+  #all_clusters_base <- all_clusters_base + 
+  #  geom_point(aes(y = mean(clus$bill_length_standardized), 
+  #                 x = mean(clus$flipper_length_standardized)), 
+  #                 colour = "#F8766D", size = 3)
+  #print(mean(clus$bill_length_standardized))
+  #print(mean(clus$flipper_length_standardized))
+  cluster_centres[cluster_number, 1] <- mean(clus$flipper_length_standardized)
+  cluster_centres[cluster_number, 2] <- mean(clus$bill_length_standardized)
+}
+
+all_clusters_base <- all_clusters_base + 
+  geom_point(aes(y = cluster_centres$y[1], 
+                 x = cluster_centres$x[1]), 
+             colour = "#F8766D", size = 3) +
+  geom_point(aes(y = cluster_centres$y[2], 
+                 x = cluster_centres$x[2]), 
+             colour = "#F8766D", size = 3) +
+  geom_point(aes(y = cluster_centres$y[3], 
+                 x = cluster_centres$x[3]), 
+             colour = "#F8766D", size = 3)
+
+all_clusters_base
+```
 
 ### The clustering algorithm
 
