final fixes to viz

--- a/viz.Rmd
+++ b/viz.Rmd
@@ -1196,11 +1196,10 @@ plot_grid(morley_hist_default,
 
 #### Adding layers to a `ggplot` plot object {-}
 
-What if we want to add onto a `ggplot` plot object later in our analysis?
-Do we need to copy and paste the code we wrote previously 
-and then add on our new layers after that? No! 
-If we stored our `ggplot` plot as a named object
-using the assignment symbol (`<-`), we can 
+One of the powerful features of `ggplot` is that you 
+can continue to iterate on a single plot object, adding and refining
+one layer at a time. If you stored your plot as a named object
+using the assignment symbol (`<-`), you can 
 add to it using the `+` operator.
 For example, if we wanted to add a title to the last plot we created (`morley_hist`), 
 we can use the `+` operator to add a title layer with the `ggtitle` function.
