changed multivariate > multiple predictors > multivariable for regression 1.

--- a/regression1.Rmd
+++ b/regression1.Rmd
@@ -16,7 +16,7 @@ Because of how similar these procedures are, make sure to read Chapters
 concepts that have already been covered.
 This chapter will primarily focus on the case where there is a single predictor, 
 but the end of the chapter shows how to perform
-regression with more than one predictor variable.
+regression with more than one predictor variable, i.e., *multivariable regression*.
 It is important to note that regression 
 can also be used to answer inferential and causal questions, 
 however that is beyond the scope of this book.
@@ -592,7 +592,7 @@ plot_final <- ggplot() +
 plot_final
 ```
 
-## KNN regression with multiple predictors
+## Multivariable KNN regression
 
 As in KNN classification, we can use multiple predictors in KNN regression.
 In this setting, we have the same concerns regarding the scale of the predictors. Once again, 
@@ -609,8 +609,8 @@ on the quality of predictions. Fortunately, we can use the predictor selection
 algorithm from the classification chapter in KNN regression as well.
 As the algorithm is the same, we will not cover it again in this chapter.
 
-We will now demonstrate an analysis of the 
-Sacramento real estate \index{Sacramento real estate} data where we perform KNN regression \index{K-nearest neighbors!regression with multiple predictors} with multiple predictors using `tidymodels`. This time we will use
+We will now demonstrate a multivariable KNN regression \index{K-nearest neighbors!multivariable regression}  analysis of the 
+Sacramento real estate \index{Sacramento real estate} data using `tidymodels`. This time we will use
 house size (measured in square feet) as well as number of bedrooms as our
 predictors, and continue to use house sale price as our outcome/target variable
 that we are trying to predict.
@@ -663,18 +663,18 @@ sacr_k <- sacr_multi |>
 sacr_multi
 ```
 Here we see that the smallest estimated RMSPE from cross-validation occurs when $K =$ `r sacr_k`.
-If we want to compare this KNN regression model with multiple predictors to the model with only a single
+If we want to compare this multivariable KNN regression model to the model with only a single
 predictor *as part of the model tuning process* (e.g., if we are running forward selection as described
 in the chapter on evaluating and tuning classification models),
 then we must compare the accuracy estimated using only the training data via cross-validation.
 Looking back, the estimated cross-validation accuracy for the single-predictor 
 model was `r format(round(sacr_min$mean), big.mark=",", nsmall=0, scientific = FALSE)`.
-The estimated cross validation accuracy for the multiple predictor model is
+The estimated cross validation accuracy for the multivariable model is
 `r format(round(sacr_multi$mean), big.mark=",", nsmall=0, scientific = FALSE)`.
 Thus in this case, we did not improve the model 
 by a large amount by adding this additional predictor.
 
-Regardless, let's continue the analysis to see how we can make predictions with a KNN regression model that has multiple predictors
+Regardless, let's continue the analysis to see how we can make predictions with a multivariable KNN regression model
 and evaluate its performance on test data. We first need to re-train the model on the entire
 training data set with $K =$ `r sacr_k`, and then use that model to make predictions
 on the test data.
