--- a/regression1.Rmd
+++ b/regression1.Rmd
@@ -114,6 +114,7 @@ eda <- ggplot(sacramento, aes(x = sqft, y = price)) +
   xlab("House size (square feet)") +
   ylab("Price (USD)") +
   scale_y_continuous(labels = dollar_format())
+
 eda
 ```
  
@@ -144,6 +145,7 @@ to randomly select. \index{slice\_sample}
 # hidden seed
 set.seed(10)
 ```
+
 ```{r 07-sacramento}
 small_sacramento <- slice_sample(sacramento, n = 30)
 ```
@@ -165,6 +167,7 @@ small_plot <- ggplot(small_sacramento, aes(x = sqft, y = price)) +
   ylab("Price (USD)") +
   scale_y_continuous(labels = dollar_format()) +
   geom_vline(xintercept = 2000, linetype = "dotted")
+
 small_plot
 ```
 
@@ -179,6 +182,7 @@ nearest_neighbours <- small_sacramento |>
   mutate(diff = abs(2000 - sqft)) |>
   arrange(diff) |>
   slice(1:5) #subset the first 5 rows
+
 nearest_neighbours
 ```
 
@@ -189,6 +193,7 @@ nn_plot <- small_plot +
     data = nearest_neighbours,
     aes(x = twothou, xend = sqft, y = price, yend = price), color = "orange"
   )
+
 nn_plot
 ```
 
@@ -203,6 +208,7 @@ the red point in Figure \@ref(fig:07-predictedViz-knn).
 ```{r 07-predicted-knn}
 prediction <- nearest_neighbours |>
   summarise(predicted = mean(price))
+
 prediction
 ```
 
@@ -274,9 +280,7 @@ use cross validation, we will choose the $K$ that gives
 us the smallest RMSPE.
 
 ```{r 07-verticalerrors, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Scatter plot of price (USD) versus house size (square feet) with example predictions (blue line) and the error in those predictions compared with true response values for three selected observations (vertical red lines).", fig.height = 4, fig.width = 5}
-
 # save the seed
-
 seedval <- .Random.seed
 
 # (synthetic) new prediction points
@@ -311,11 +315,16 @@ errors_plot <- ggplot(small_sacramento, aes(x = sqft, y = price)) +
   xlab("House size (square feet)") +
   ylab("Price (USD)") +
   scale_y_continuous(labels = dollar_format()) +
-  geom_line(data = sacr_full_preds_hid, aes(x = sqft, y = .pred), color = "blue") + 
+  geom_line(data = sacr_full_preds_hid, 
+            aes(x = sqft, y = .pred), 
+            color = "blue") + 
   geom_segment(
     data = sacr_new_preds_hid,
-    aes(x = sqft, xend = sqft, y = price, yend = .pred), color = "red") + 
-  geom_point(data = sacr_new_preds_hid, aes(x = sqft, y = price), color = "black")
+    aes(x = sqft, xend = sqft, y = price, yend = .pred), 
+    color = "red") + 
+  geom_point(data = sacr_new_preds_hid, 
+             aes(x = sqft, y = price), 
+             color = "black")
 
 # restore the seed
 .Random.seed <- seedval
@@ -361,7 +370,8 @@ sacr_recipe <- recipe(price ~ sqft, data = sacramento_train) |>
   step_scale(all_predictors()) |>
   step_center(all_predictors())
 
-sacr_spec <- nearest_neighbor(weight_func = "rectangular", neighbors = tune()) |>
+sacr_spec <- nearest_neighbor(weight_func = "rectangular", 
+                              neighbors = tune()) |>
   set_engine("kknn") |>
   set_mode("regression")
 
@@ -370,6 +380,7 @@ sacr_vfold <- vfold_cv(sacramento_train, v = 5, strata = price)
 sacr_wkflw <- workflow() |>
   add_recipe(sacr_recipe) |>
   add_model(sacr_spec)
+
 sacr_wkflw
 ```
 Next we run cross validation for a grid of numbers of neighbours ranging from 1 to 200. 
@@ -385,7 +396,6 @@ as they do not provide any additional insight.
 \index{cross validation!collect\_metrics}
 
 ```{r 07-choose-k-knn-results}
-
 gridvals <- tibble(neighbors = seq(from = 1, to = 200, by = 3))
 
 sacr_results <- sacr_wkflw |>
@@ -396,21 +406,27 @@ sacr_results <- sacr_wkflw |>
 # show the results
 sacr_results
 ```
+
 ```{r 07-choose-k-knn-plot, echo = FALSE, fig.height = 4, fig.width = 5, fig.cap = "Effect of the number of neighbours on the RMSPE"} 
 sacr_tunek_plot <- ggplot(sacr_results, aes(x = neighbors, y = mean)) +
   geom_point() +
   geom_line() +
   labs(x = "Neighbours", y = "RMSPE")
+
 sacr_tunek_plot
 ```
+
 Figure \@ref(fig:07-choose-k-knn-plot) visualizes how the RMSPE varies with the number of neighbours $K$.
 We take the *minimum* RMSPE to find the best setting for the number of neighbours:
+
 ```{r 07-choose-k-knn-results-2}
 # show only the row of minimum RMSPE
 sacr_min <- sacr_results |>
   filter(mean == min(mean))
+
 sacr_min
 ```
+
 The smallest RMSPE occurs when $K =$ `r sacr_min |> pull(neighbors)`.
 
 ```{r 07-get-kmin, echo = FALSE, message = FALSE, warning = FALSE}
@@ -436,7 +452,8 @@ plots <- list()
 
 for (i in 1:6) {
   if (i < 6){
-      sacr_spec <- nearest_neighbor(weight_func = "rectangular", neighbors = gridvals[[i]]) %>%
+      sacr_spec <- nearest_neighbor(weight_func = "rectangular", 
+                                    neighbors = gridvals[[i]]) |>
         set_engine("kknn") |>
         set_mode("regression")
 
@@ -462,7 +479,10 @@ for (i in 1:6) {
         xlab("House size (square feet)") +
         ylab("Price (USD)") +
         scale_y_continuous(labels = dollar_format()) +
-        geom_hline(data = sacr_preds, mapping = aes(x = sqft), yintercept = mean(sacr_preds$price), color = "blue") +
+        geom_hline(data = sacr_preds, 
+                   mapping = aes(x = sqft), 
+                   yintercept = mean(sacr_preds$price), 
+                   color = "blue") +
         ggtitle(paste0("K = ", gridvals[[i]]))
   }
 }
@@ -527,6 +547,7 @@ function knows to output a quality summary related to regression, and not, say, 
 
 ```{r 07-predict}
 kmin <- sacr_min |> pull(neighbors)
+
 sacr_spec <- nearest_neighbor(weight_func = "rectangular", neighbors = kmin) |>
   set_engine("kknn") |>
   set_mode("regression")
@@ -582,8 +603,12 @@ sacr_preds <- sacr_fit |>
   bind_cols(sacr_preds)
 
 plot_final <- ggplot() +
-  geom_point(data = sacramento_train, mapping = aes(x = sqft, y = price), alpha = 0.4) +
-  geom_line(data = sacr_preds, mapping = aes(x = sqft, y = .pred), color="blue") +
+  geom_point(data = sacramento_train, 
+             mapping = aes(x = sqft, y = price), 
+             alpha = 0.4) +
+  geom_line(data = sacr_preds, 
+            mapping = aes(x = sqft, y = .pred), 
+            color="blue") +
   xlab("House size (square feet)") +
   ylab("Price (USD)") +
   scale_y_continuous(labels = dollar_format()) +
@@ -639,18 +664,23 @@ size. Let's do that now!
 First we'll build a new model specification and recipe for the analysis. Note that
 we use the formula `price ~ sqft + beds` to denote that we have two predictors,
 and set `neighbors = tune()` to tell `tidymodels` to tune the number of neighbours for us.
+
 ```{r 07-mult-setup}
 sacr_recipe <- recipe(price ~ sqft + beds, data = sacramento_train) |>
   step_scale(all_predictors()) |>
   step_center(all_predictors())
 
-sacr_spec <- nearest_neighbor(weight_func = "rectangular", neighbors = tune()) |>
+sacr_spec <- nearest_neighbor(weight_func = "rectangular", 
+                              neighbors = tune()) |>
   set_engine("kknn") |>
   set_mode("regression")
 ```
+
 Next, we'll use 5-fold cross-validation to choose the number of neighbours via the minimum RMSPE:
+
 ```{r 07-mult-cv}
 gridvals <- tibble(neighbors = seq(1, 200))
+
 sacr_multi <- workflow() |>
   add_recipe(sacr_recipe) |>
   add_model(sacr_spec) |>
@@ -658,10 +688,13 @@ sacr_multi <- workflow() |>
   collect_metrics() |>
   filter(.metric == "rmse") |>
   filter(mean == min(mean))
+
 sacr_k <- sacr_multi |>
               pull(neighbors)
+
 sacr_multi
 ```
+
 Here we see that the smallest estimated RMSPE from cross-validation occurs when $K =$ `r sacr_k`.
 If we want to compare this multivariable KNN regression model to the model with only a single
 predictor *as part of the model tuning process* (e.g., if we are running forward selection as described
@@ -678,8 +711,10 @@ Regardless, let's continue the analysis to see how we can make predictions with 
 and evaluate its performance on test data. We first need to re-train the model on the entire
 training data set with $K =$ `r sacr_k`, and then use that model to make predictions
 on the test data.
+
 ```{r 07-re-train}
-sacr_spec <- nearest_neighbor(weight_func = "rectangular", neighbors = sacr_k) |>
+sacr_spec <- nearest_neighbor(weight_func = "rectangular", 
+                              neighbors = sacr_k) |>
   set_engine("kknn") |>
   set_mode("regression")
 
@@ -692,7 +727,7 @@ knn_mult_preds <- knn_mult_fit |>
   predict(sacramento_test) |>
   bind_cols(sacramento_test)
 
-knn_mult_mets <- metrics(knn_mult_preds, truth = price, estimate = .pred) %>%
+knn_mult_mets <- metrics(knn_mult_preds, truth = price, estimate = .pred) |>
                      filter(.metric == 'rmse')
 knn_mult_mets
 ```
@@ -706,11 +741,16 @@ predictors instead of 1.
 ```{r 07-knn-mult-viz, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "KNN regression model’s predictions represented as a surface in 3-D space overlaid on top of the data using three predictors (price, house size, and the number of bedrooms)"}
 library(plotly)
 
-xvals <- seq(from = min(sacramento_train$sqft), to = max(sacramento_train$sqft), length = 50)
-yvals <- seq(from = min(sacramento_train$beds), to = max(sacramento_train$beds), length = 50)
+xvals <- seq(from = min(sacramento_train$sqft), 
+             to = max(sacramento_train$sqft), 
+             length = 50)
+yvals <- seq(from = min(sacramento_train$beds), 
+             to = max(sacramento_train$beds), 
+             length = 50)
 
 zvals <- knn_mult_fit |>
-  predict(crossing(xvals, yvals) |> mutate(sqft = xvals, beds = yvals)) |>
+  predict(crossing(xvals, yvals) |> 
+            mutate(sqft = xvals, beds = yvals)) |>
   pull(.pred)
 
 zvalsm <- matrix(zvals, nrow = length(xvals))
