fixed any above/below fig refs that were present, and some typos

--- a/regression1.Rmd
+++ b/regression1.Rmd
@@ -129,9 +129,11 @@ predict the former.
 
 ## K-nearest neighbours regression
 
-Much like in the case of classification, we can use a K-nearest
-neighbours-based \index{K-nearest neighbors!regression} approach in regression to make predictions. Let's take a small
-sample of the data above and walk through how K-nearest neighbours (K-NN) works
+Much like in the case of classification, 
+we can use a K-nearest neighbours-based \index{K-nearest neighbors!regression} 
+approach in regression to make predictions. 
+Let's take a small sample of the data in Figure \@ref(fig:07-edaRegr) 
+and walk through how K-nearest neighbours (K-NN) works
 in a regression context before we dive in to creating our model and assessing
 how well it predicts house sale price. This subsample is taken to allow us to
 illustrate the mechanics of KNN regression with a few data points; later in
@@ -173,8 +175,10 @@ small_plot
 
 We will employ the same intuition from the classification chapter, and use the
 neighbouring points to the new point of interest to suggest/predict what its
-sale price might be. For the example above, we find and label the 5 nearest
-neighbours to our observation of a house that is 2,000 square feet.
+sale price might be. 
+For the example shown in Figure \@ref(fig:07-small-eda-regr), 
+we find and label the 5 nearest neighbours to our observation 
+of a house that is 2,000 square feet.
 \index{mutate}\index{slice}\index{arrange}\index{abs}
 
 ```{r 07-find-k3}
@@ -236,10 +240,14 @@ about what the data must look like for it to work.
 
 ## Training, evaluating, and tuning the model
 
-As usual, we must start by putting some test data away in a lock box that we
-will come back to only after we choose our final model. Let's take care of that
-now. Note that for the remainder of the chapter we'll be working with the
-entire Sacramento data set, as opposed to the smaller sample of 30 points above.
+As usual, 
+we must start by putting some test data away in a lock box 
+that we will come back to only after we choose our final model. 
+Let's take care of that now. 
+Note that for the remainder of the chapter 
+we'll be working with the entire Sacramento data set, 
+as opposed to the smaller sample of 30 points 
+that we used earlier in the chapter (Figure \@ref(fig:07-small-eda-regr)).
 \index{training data}
 \index{test data}
 
@@ -385,10 +393,10 @@ sacr_wkflw
 ```
 Next we run cross validation for a grid of numbers of neighbours ranging from 1 to 200. 
 The following code tunes
-the model and returns the RMSPE for each number of neighbours. In the below
-results data frame, the `neighbors` variable contains the value of $K$,
+the model and returns the RMSPE for each number of neighbours. In the output of the `sacr_results`
+results data frame, we see that the `neighbors` variable contains the value of $K$,
 the mean (`mean`) contains the value of the RMSPE estimated via cross-validation,
-and the standard error (`std_err`) is a measure of how uncertain we are in the mean value. A detailed treatment of this
+and the standard error (`std_err`) contains a value corresponding to a measure of how uncertain we are in the mean value. A detailed treatment of this
 is beyond the scope of this chapter; but roughly, if your estimated mean is 100,000 and standard
 error is 1,000, you can expect the *true* RMSPE to be somewhere roughly between 99,000 and 101,000 (although it may
 fall outside this range). You may ignore the other columns in the metrics data frame,
