--- a/regression1.Rmd
+++ b/regression1.Rmd
@@ -391,6 +391,7 @@ sacr_wkflw <- workflow() |>
 
 sacr_wkflw
 ```
+
 Next we run cross validation for a grid of numbers of neighbours ranging from 1 to 200. 
 The following code tunes
 the model and returns the RMSPE for each number of neighbours. In the output of the `sacr_results`
@@ -453,7 +454,7 @@ For each model, we predict prices for the range of possible home sizes we
 observed in the data set (here 500 to 5,000 square feet) and we plot the
 predicted prices as a blue line.
 
-```{r 07-howK, echo = FALSE, fig.height = 12, fig.width = 10,fig.cap = "Predicted values for house price (represented as a blue line) from KNN regression models for six different values for $K$"}
+```{r 07-howK, echo = FALSE, warning = FALSE, fig.height = 12, fig.width = 10,fig.cap = "Predicted values for house price (represented as a blue line) from KNN regression models for six different values for $K$"}
 gridvals <- c(1, 3, kmin, 41, 250, 932)
 
 plots <- list()
@@ -610,13 +611,11 @@ sacr_preds <- sacr_fit |>
   predict(sacr_preds) |>
   bind_cols(sacr_preds)
 
-plot_final <- ggplot() +
-  geom_point(data = sacramento_train, 
-             mapping = aes(x = sqft, y = price), 
-             alpha = 0.4) +
+plot_final <- ggplot(sacramento_train, aes(x = sqft, y = price)) +
+  geom_point(alpha = 0.4) +
   geom_line(data = sacr_preds, 
             mapping = aes(x = sqft, y = .pred), 
-            color="blue") +
+            color = "blue") +
   xlab("House size (square feet)") +
   ylab("Price (USD)") +
   scale_y_continuous(labels = dollar_format()) +
